some fixes and upload slides

--- a/exercises/02_rag.ipynb
+++ b/exercises/02_rag.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fe169c6f",
+   "id": "aaa08517",
    "metadata": {},
    "source": [
     "# Exercise 2: RAG\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e40eac9",
+   "id": "1066eb92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,35 +24,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "828ee050",
+   "id": "20b2aa63",
    "metadata": {},
    "outputs": [],
    "source": [
     "import glob\n",
     "import os\n",
     "\n",
-    "from databricks_langchain import ChatDatabricks, DatabricksEmbeddings\n",
-    "from langchain.prompts import ChatPromptTemplate\n",
-    "from langchain.vectorstores import InMemoryVectorStore\n",
     "from langchain_community.document_loaders import PyMuPDFLoader\n",
-    "from langchain_text_splitters import RecursiveCharacterTextSplitter"
+    "from langchain_community.vectorstores import InMemoryVectorStore\n",
+    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
+    "\n",
+    "from llm import embeddings as embed\n",
+    "from llm import model"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55d4f7f7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = ChatDatabricks(endpoint=\"databricks-claude-sonnet-4-5\")\n",
-    "embed = DatabricksEmbeddings(endpoint=\"databricks-gte-large-en\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "55648e90",
+   "id": "9cb057d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf0e5066",
+   "id": "b2fd2d24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "288671c1",
+   "id": "263ef480",
    "metadata": {},
    "outputs": [],
    "source": [
