--- a/exercises/04_react.ipynb
+++ b/exercises/04_react.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "aae95070",
+   "id": "c6b2111e",
    "metadata": {},
    "source": [
     "# Exercise 4: ReAct Agent\n",
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0438a182",
+   "id": "def9c1eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,14 +28,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0fb34a04",
+   "id": "d2d6056f",
    "metadata": {},
    "outputs": [],
    "source": [
     "import operator\n",
     "from typing import Literal\n",
     "\n",
-    "from databricks_langchain import ChatDatabricks\n",
     "from langchain.messages import AnyMessage, HumanMessage, SystemMessage, ToolMessage\n",
     "from langchain.tools import BaseTool, tool\n",
     "from langgraph.graph import END, START, StateGraph\n",
@@ -45,10 +44,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96cff30f",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "id": "32f41a46",
+   "metadata": {},
    "outputs": [],
    "source": [
     "from llm import model"
@@ -56,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcbd1ce6",
+   "id": "e854dcf8",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -69,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ed2b884",
+   "id": "24dfe312",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "433e6d60",
+   "id": "6ac0eed6",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -115,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3118d810",
+   "id": "c8d0d32e",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -203,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9773e47",
+   "id": "ba338e03",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -227,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14807886",
+   "id": "89bf56eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,10 +243,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbe76d92",
-   "metadata": {
-    "lines_to_next_cell": 1
-   },
+   "id": "52437dea",
+   "metadata": {},
    "outputs": [],
    "source": [
     "search_query = \"What is Altana?\"\n",
@@ -265,8 +260,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ea71a48",
-   "metadata": {},
+   "id": "7a94ce57",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "source": [
     "## Demo: Functional API\n",
     "\n",
@@ -277,10 +274,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7800369a",
-   "metadata": {
-    "lines_to_next_cell": 1
-   },
+   "id": "af9c70cd",
+   "metadata": {},
    "outputs": [],
    "source": [
     "def build_agent_func(tools):\n",
@@ -316,7 +311,7 @@
     "        return tool.invoke(tool_call)\n",
     "\n",
     "    # Step 4: Define agent\n",
-    "    @entrypoint(checkpointer=checkpointer)\n",
+    "    @entrypoint()\n",
     "    def agent(messages: list[BaseMessage]):\n",
     "        model_response = call_llm(messages).result()\n",
     "\n",
@@ -341,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5bc6d01",
+   "id": "d1046ac5",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -356,7 +351,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7067bdd",
+   "id": "1c71b612",
    "metadata": {},
    "source": [
     "# Exercise 4.10 (Bonus): Turn the agent into a chatbot.\n",
