--- a/exercises/06_code_execution.ipynb
+++ b/exercises/06_code_execution.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3cff3b37",
+   "id": "5aa33920",
    "metadata": {},
    "source": [
     "# Exercise 6: Code Execution vs Tool Calling\n",
@@ -13,18 +13,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7aaa4db6",
+   "id": "084995f9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install smolagents\n",
+    "%pip install smolagents langchain databricks-langchain pandas scikit-learn\n",
     "%restart_python"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "355b5eda",
+   "id": "01e0dae3",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -34,9 +34,10 @@
     "from langchain.agents import create_agent\n",
     "from langchain.messages import AIMessage, HumanMessage\n",
     "from langchain.tools import tool\n",
-    "from llm import model as llm\n",
     "from smolagents import LocalPythonExecutor\n",
     "from smolagents.local_python_executor import InterpreterError\n",
+    "\n",
+    "from llm import model as llm\n",
     "\n",
     "df = pd.read_csv(\n",
     "    \"https://raw.githubusercontent.com/datasciencedojo/datasets/refs/heads/master/titanic.csv\"\n",
@@ -79,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ae352f0",
+   "id": "f13e04ee",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -110,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6fdab543",
+   "id": "c3bb24b6",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -127,6 +128,7 @@
     "import uuid\n",
     "\n",
     "from langgraph.store.memory import InMemoryStore\n",
+    "\n",
     "from llm import embedding_dimensions, embeddings\n",
     "\n",
     "# <solution>\n",
@@ -138,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03978ef9",
+   "id": "a49260d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c28b613d",
+   "id": "48c7eb62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82eb981c",
+   "id": "33aceb82",
    "metadata": {},
    "outputs": [],
    "source": [
